MiniC-compiler-code/grammars/.antlr/MiniCParser.java
// Generated from /Users/amir/Desktop/CSC488/MiniC/MiniC-compiler-code/grammars/MiniC.g4 by ANTLR 4.8

#include <vector>
#include "Program.h"
#include "Declarations.h"
#include "Statements.h"
#include "Exprs.h"
#include "Terms.h"

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, ID=36, INT=37, WS=38, COMMENT=39;
	public static final int
		RULE_prog = 0, RULE_preamble = 1, RULE_decl = 2, RULE_vardecl = 3, RULE_scope = 4, 
		RULE_stmt = 5, RULE_varlist = 6, RULE_varlistentry = 7, RULE_vartype = 8, 
		RULE_rettype = 9, RULE_parameters = 10, RULE_parameterlist = 11, RULE_parameterentry = 12, 
		RULE_expropt = 13, RULE_expr = 14, RULE_var = 15, RULE_arguments = 16, 
		RULE_argumentlist = 17, RULE_varname = 18, RULE_funcname = 19, RULE_parametername = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "preamble", "decl", "vardecl", "scope", "stmt", "varlist", "varlistentry", 
			"vartype", "rettype", "parameters", "parameterlist", "parameterentry", 
			"expropt", "expr", "var", "arguments", "argumentlist", "varname", "funcname", 
			"parametername"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#include'", "'\"minicio.h\"'", "'('", "')'", "';'", "'{'", "'}'", 
			"'if'", "'else'", "'for'", "'while'", "'break'", "'return'", "','", "'['", 
			"']'", "'int'", "'bool'", "'void'", "'-'", "'*'", "'/'", "'+'", "'=='", 
			"'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "'&&'", "'||'", "'='", "'true'", 
			"'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ID", "INT", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public minicc::Program * val;
		public DeclContext decl;
		public TerminalNode EOF() { return getToken(MiniCParser.EOF, 0); }
		public PreambleContext preamble() {
			return getRuleContext(PreambleContext.class,0);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);

			    ((ProgContext)_localctx).val =  new minicc::Program();
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(42);
				preamble();

				        _localctx.val->setSyslibFlag(true);
				    
				}
				break;
			case EOF:
			case T__16:
			case T__17:
			case T__18:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__17) | (1L << T__18))) != 0)) {
				{
				{
				setState(48);
				((ProgContext)_localctx).decl = decl();

				        _localctx.val->addChild(((ProgContext)_localctx).decl.d);
				    
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(EOF);

			        _localctx.val->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreambleContext extends ParserRuleContext {
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preamble);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__0);
			setState(60);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public minicc::Declaration * d;
		public VardeclContext vardecl;
		public RettypeContext rettype;
		public FuncnameContext funcname;
		public ParametersContext parameters;
		public ScopeContext scope;
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public RettypeContext rettype() {
			return getRuleContext(RettypeContext.class,0);
		}
		public FuncnameContext funcname() {
			return getRuleContext(FuncnameContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				((DeclContext)_localctx).vardecl = vardecl();

				        ((DeclContext)_localctx).d =  ((DeclContext)_localctx).vardecl.vd;
				        _localctx.d->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				((DeclContext)_localctx).rettype = rettype();
				setState(66);
				((DeclContext)_localctx).funcname = funcname();
				setState(67);
				match(T__2);
				setState(68);
				((DeclContext)_localctx).parameters = parameters();
				setState(69);
				match(T__3);
				setState(70);
				((DeclContext)_localctx).scope = scope();

				            minicc::FuncDeclaration *fd = new minicc::FuncDeclaration();
				            fd->setHasBody(true);
				            fd->addChild(((DeclContext)_localctx).rettype.rt);
				            fd->addChild(((DeclContext)_localctx).funcname.fName);
				            for(auto it = ((DeclContext)_localctx).parameters.params.begin() ; it != ((DeclContext)_localctx).parameters.params.end(); ++it) {
				                fd->addChild(*it);
				            }
				            fd->addChild(((DeclContext)_localctx).scope.ss);
				            ((DeclContext)_localctx).d =  fd;
				            _localctx.d->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				        
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				((DeclContext)_localctx).rettype = rettype();
				setState(74);
				((DeclContext)_localctx).funcname = funcname();
				setState(75);
				match(T__2);
				setState(76);
				((DeclContext)_localctx).parameters = parameters();
				setState(77);
				match(T__3);
				setState(78);
				match(T__4);

				            minicc::FuncDeclaration *fd = new minicc::FuncDeclaration();
				            fd->addChild(((DeclContext)_localctx).rettype.rt);
				            fd->addChild(((DeclContext)_localctx).funcname.fName);
				            for(auto it = ((DeclContext)_localctx).parameters.params.begin() ; it != ((DeclContext)_localctx).parameters.params.end(); ++it) {
				                fd->addChild(*it);
				            ((DeclContext)_localctx).d =  fd;
				        }
				        _localctx.d->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public minicc::VarDeclaration * vd;
		public VartypeContext vartype;
		public VarlistContext varlist;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((VardeclContext)_localctx).vartype = vartype();
			setState(84);
			((VardeclContext)_localctx).varlist = varlist(0);
			setState(85);
			match(T__4);

			        ((VardeclContext)_localctx).vd =  new minicc::VarDeclaration();
			        _localctx.vd->addChild(((VardeclContext)_localctx).vartype.t);
				    for(auto it = ((VardeclContext)_localctx).varlist.vLst.begin() ; it != ((VardeclContext)_localctx).varlist.vLst.end(); ++it) {
			            _localctx.vd->addChild(*it);
			        }
			        _localctx.vd->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public minicc::ScopeStatement * ss;
		public VardeclContext vardecl;
		public StmtContext stmt;
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scope);

		        size_t numVarExprs = 0;
		        ((ScopeContext)_localctx).ss =  new minicc::ScopeStatement();
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__5);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16 || _la==T__17) {
				{
				{
				setState(89);
				((ScopeContext)_localctx).vardecl = vardecl();

				            _localctx.ss->addChild(((ScopeContext)_localctx).vardecl.vd);
				            numVarExprs = numVarExprs + ((ScopeContext)_localctx).vardecl.vd->numVarReferences();
				        
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__5) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__19) | (1L << T__29) | (1L << T__33) | (1L << T__34) | (1L << ID) | (1L << INT))) != 0)) {
				{
				{
				setState(97);
				((ScopeContext)_localctx).stmt = stmt();

				        _localctx.ss->addChild(((ScopeContext)_localctx).stmt.s);
				    
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(T__6);

			        _localctx.ss->setNumVarDecl(numVarExprs);
			        _localctx.ss->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public minicc::Statement * s;
		public ExprContext expr;
		public StmtContext stmt;
		public StmtContext s1;
		public StmtContext s2;
		public ExproptContext e1;
		public ExproptContext e2;
		public ExproptContext e3;
		public ScopeContext scope;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<ExproptContext> expropt() {
			return getRuleContexts(ExproptContext.class);
		}
		public ExproptContext expropt(int i) {
			return getRuleContext(ExproptContext.class,i);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stmt);
		try {
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				((StmtContext)_localctx).expr = expr(0);
				setState(109);
				match(T__4);

				        ((StmtContext)_localctx).s =  new minicc::ExprStatement();
				        ((minicc::ExprStatement*)_localctx.s)->addChild(((StmtContext)_localctx).expr.e);
				        _localctx.s->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(T__7);
				setState(113);
				match(T__2);
				setState(114);
				((StmtContext)_localctx).expr = expr(0);
				setState(115);
				match(T__3);
				setState(116);
				((StmtContext)_localctx).stmt = stmt();

				        ((StmtContext)_localctx).s =  new minicc::IfStatement();
				        ((minicc::IfStatement*)_localctx.s)->addChild(((StmtContext)_localctx).expr.e);
				        ((minicc::IfStatement*)_localctx.s)->addChild(((StmtContext)_localctx).stmt.s);
				        _localctx.s->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(T__7);
				setState(120);
				match(T__2);
				setState(121);
				((StmtContext)_localctx).expr = expr(0);
				setState(122);
				match(T__3);
				setState(123);
				((StmtContext)_localctx).s1 = stmt();
				setState(124);
				match(T__8);
				setState(125);
				((StmtContext)_localctx).s2 = stmt();
